sandbox/output
StockProfit.cpp:50:35: error: expected ')'
            maxProfitsAfterBuy_[i];
                                  ^
StockProfit.cpp:49:44: note: to match this '('
        maxProfitsWithStockInHand_[i] = max(maxProfitsAfterBuy_[i - 1],
                                           ^
1 error generated.
make: *** [test] Error 1
